crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__basic_file_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content
---
# jarl-ignore any_is_na: <reason>
any(is.na(x))
