crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__custom_reason_file_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content
---
# jarl-ignore any_is_na: known issue in legacy code
any(is.na(x))
