crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__custom_reason_output.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: output
---

success: true
exit_code: 0
----- stdout -----
Modified: Added 1 suppression comment(s) to test.R

Summary: Added 1 suppression comment(s) across 1 file(s).

----- stderr -----

----- args -----
check . --add-jarl-ignore=known issue in legacy code
