crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__different_rules_same_line_file_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content
---
if (
    # jarl-ignore redundant_equals: <reason>
    # jarl-ignore any_is_na: <reason>
    x == TRUE || any(is.na(y))) {
  1
}
