crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__indentation_file_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content
---
f <- function() {
  # jarl-ignore any_is_na: <reason>
  any(is.na(x))
}
