crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__inline_condition_file_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content
---
if (
    # jarl-ignore any_is_na: <reason>
    any(is.na(x))) {
  print(1)
}
