crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__multiline_condition_file_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content
---
if (
  # jarl-ignore redundant_equals: <reason>
  super_long_variable_name == TRUE ||
    super_long_variable_name_again == TRUE
) {
  1
}
